docs/styles.scss
@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro|Oswald|Source+Sans+Pro:200');

$button-color: #e5e5e5;
$btn-hi-clr: #c44061;
$collapse: 768px;
$col-collapse: 991px;

@mixin transition($property, $duration: .5s, $timing-function: ease, $delay: 0s) {
    /* #${} removes quotation marks */
    -webkit-transition-property: #{$property};
       -moz-transition-property: #{$property};
         -o-transition-property: #{$property};
            transition-property: #{$property};
    -webkit-transition-duration: $duration;
       -moz-transition-duration: $duration;
         -o-transition-duration: $duration;
            transition-duration: $duration;
    -webkit-transition-timing-function: $timing-function;
       -moz-transition-timing-function: $timing-function;
         -o-transition-timing-function: $timing-function;
            transition-timing-function: $timing-function;
    -webkit-transition-delay: $delay;
       -moz-transition-delay: $delay;
         -o-transition-delay: $delay;
            transition-delay: $delay;

}

@mixin box($box-orient: vertical) {
    display: -webkit-box;
       display: -moz-box;
            display: box;
    -webkit-box-orient: $box-orient;
       -moz-box-orient: $box-orient;
            box-orient: $box-orient;
}

@mixin box-ordinal-group($group) {
    -webkit-box-ordinal-group: $group;
       -moz-box-ordinal-group: $group;
            box-ordinal-group: $group;
}

html, body {
    margin: 0;
    padding: 0;
    border: none;
    height: 100%;
}

h1 {
    font-weight: 100;
    font-family: "Oswald", sans-serif;
}

#content {
    height: 100%;
    width: 100%;
    padding: 0;
    z-index: -1;
}

#homepage {
    text-align: center;
    background-image: url("imgs/bg.png");
    background-attachment: fixed;
    width: 100%;
    height: 100%;
    margin: 0px;
}

#homepage h1 {
    font-weight: 100;
    font-size: 10vw;
    letter-spacing: 5px;
    margin-bottom: 0.1em;
    margin-top: 0.5em;
}

#homepage-desc {
    font-family: Source Sans Pro;
    font-weight: 100;
    margin: 0px auto 2em auto;
    /*background-color: rgb(204, 204, 204);
    box-shadow: 0px 0px 3px 3px rgb(204, 204, 204);*/
}

#homepage-desc span {
    font-size: 2vw;
    padding: 0.2em 0.5em;
    font-weight: normal;
}

#features {
    overflow-x: hidden;
}

#features p, #vision p, #download p {
    font-size: 2em;
    font-family: Source Sans Pro;
    font-weight: normal;
    @media(max-width: $collapse) {
        font-size: 3vw;
    }
}

#features h1, #vision h1 {
    font-size: 4em;
    @media(max-width: $collapse) {
        font-size: 6vw;
    }
}

#features .row {
    margin-top: 50px;
    opacity: 0;
    position: relative;
    &:nth-child(even) {
        left: -100px;
    }
    &:nth-child(odd) {
        left: 100px;
    }
    @include transition("opacity, left", 1s);
    @media(max-width: $col-collapse) {
        @include box;
    }
}

#features .row.in-view {
    opacity: 1;
    left: 0px;
}

#features img {
    max-width: 100%;
    min-width: 50%;
    display: block;
    margin: 0 auto;
}

#features .col-md-4 {
    @include box-ordinal-group(2);
}
#features .col-md-8 {
    @include box-ordinal-group(1);
}

.homepage-text {
    background-color: #222;
    color: #eee;
    padding: 20px 20px 30px 20px;
    font-family: "Source Sans Pro", sans-serif;
    border-top: 25px solid #111;
    text-shadow: 0px 1px 2px #222;
}

.homepage-text p {
    margin: 1.5em 0;
}

.homepage-text h1 {
    font-family: Oswald, sans-serif;
}

.button {
    background-color: $button-color;
    padding: 0.4em 0.6em;
    font-size: 2em;
    font-family: Source Sans Pro;
    margin: 0 0.5em;

    text-shadow: 0px 1px 1px 777;
    border-radius: 5px;
    box-shadow: 0px -2px 5px ($button-color - #333) inset;

    cursor: pointer;
    @include transition(background-color);

    display: inline-block;

}

.button:hover {
    background-color: $button-color - #111;
}

.button.highlight {
    color: #e5e5e5;
    background-color: $btn-hi-clr;
    box-shadow: 0px -2px 5px ($btn-hi-clr - #111) inset;
}

.button.highlight:hover {
    background-color: $btn-hi-clr - #222;
}

/*
NAVBAR
________________________________________

note: "nav"  selector refers to the outer <nav>
      ".nav" selector refers to the inner <ul class="nav">
*/

#navbar {
    background-color: black;
    color: white;
    font-family: Source Sans Pro;
    padding: 0 0 0 2em;
    position: fixed;
    width: 100%;
    font-size: 2em;
    top: 0;
}

/* .navbar class for priority over bs styles */
nav.navbar {
    background: none;
    color: white;
    border-radius: 0px;
    width: 100%;
    z-index: 2;
    border: none;
    @include transition(background-color, .5s, linear);
    @media(max-width: $collapse) {
        padding-left: 20px;
    }
}

nav.navbar .navbar-default {
    background-color: transparent;
    color: white;
}

.navbar-default .navbar-nav>li>a {
    color: #fff;
    &:hover { color: #ddd; }
}

nav.not-top {
    background-color: black;
}

.nav {
    width: 100%;
}

.navbar-toggle {
    z-index: 1031;
}

.navbar-collapse {
    padding-right: 0;
}

.navbar-collapse.in, .navbar-collapse.collapsing {
    background-color: black !important;
}

/*
NAVBAR LOGO
________________________________________
*/

#navbar-logo {
    background-image: url("imgs/logo_96px_white.png");
    background-size: 96px;
    background-repeat: no-repeat;
    /*display: inline-block;*/
    background-position: center center;
    width: 96px;
    @media(max-width: $collapse) {
        background-image: url("imgs/logo_64px_white.png");
        width: 64px;
        background-size: 64px;
        width: 100%;
        background-position: 10px center;
    }
    &:hover {
        text-decoration: none;
        background-image: url("imgs/logo_96px_black.png");
        @media(max-width: $collapse) {
            background-image: url("imgs/logo_64px_black.png");
        }
    }
}

nav.not-top .active #navbar-logo {
    background-color: #000;
    &:hover {
        background-color: #eee;
    }
}

#navbar-logo-parent {
    height: 50px;
    @media(max-width: $collapse) {
        height: 40px;
        width: 100%;
    }
}

#navbar-logo-parent.active #navbar-logo {
    background-color: transparent;
}

/*
NAV LINKS
________________________________________
*/

.nav-link {
    color: #ccc;
    font-family: "Source Sans Pro", sans-serif;
    font-size: 2em;
    font-weight: 200;
}

.nav-item.active .nav-link {
    background-color: #eee;
    color: #222;
}

#nav-download {
    background-color: $btn-hi-clr;
    float: right;
    margin-right: 0;
    height: 100%;
    box-shadow: 0px -2px 5px ($btn-hi-clr - #111) inset;
    right: 0;
    float: right;
    @include transition(background-color);
}

#nav-download:hover, #nav-download:active, #nav-download.active a {
    background-color: $btn-hi-clr - #111;
    color: inherit;
}

#nav-download-link:hover, #nav-download-link:active {
    background-color: inherit;
    color: inherit;
}

.navbar-collapse.in #nav-download, .navbar-collapse.collapsing #nav-download {
    width: 100%;
}

.navbar-default .navbar-toggle:focus {
    background-color: transparent;
}

/*
moar stuffs
________________________________________
*/

#download {
    background-image: url("imgs/promo.png");
    background-size: cover !important;
    background-repeat: no-repeat;
    padding-top: 1.5em;
    margin-top: 2em;
    border-top: 20px solid #222;
}

.fg-text {
    margin: 0 auto;
    width: 50%;
    background-color: rgba(0, 0, 0, .5);
    padding: 0 4%;
    color: #eee;
    box-shadow: 0px 0px 2px black;
    text-shadow: 0px 1px 1px #333;
    padding-bottom: 1em;
}

.fg-text.lg {
    width: 65%;
}

#download h1 {
    text-align: center;
    font-size: 1.25em;
    padding-top: .5em;
}

#content p {
    font-family: "Source Sans Pro", sans-serif;
}

.note {
    font-size: .75em;
    margin-top: 1em;
    font-weight: 200;
}

.navbar-link {
    color: #f0f0f0;
    text-decoration: none;
    margin: 0 1em;
    height: 100%;
}

dfn {
    cursor: help;
    border-bottom: 1px dotted #222;
    font-style: normal;
}

.avbtn {
    display: inline-block;
    color: #333;
    font-size: 2em;
    text-shadow: 0px 1px 2px #aaa;
    padding: .3em .5em;
    margin: 0 .2em;
    border-radius: 10px;
    font-family: "Source Sans Pro", sans-serif;
    border: 2px solid #ddd;
    box-shadow: 0px 0px 2px #ddd inset;
    cursor: pointer;
    background: linear-gradient(#f2f2f2, #eee);
    
    &:hover {
        text-decoration: none;
        color: #222;
        box-shadow: 0px 0px 4px #ccc inset;
        background: linear-gradient(#eee, #ddd);
    }
    &:focus {
        color: #222;
        text-decoration: none;
    }
    &:active {
        background: linear-gradient(#ddd, #eee);
    }
}

.avbtn-bold {
    background: linear-gradient($btn-hi-clr + #111, $btn-hi-clr);
    border-color: $btn-hi-clr + #050505;
    box-shadow: 0px 0px 2px ($btn-hi-clr - #111) inset;
    color: #eee;
    text-shadow: 0px 1px 2px ($btn-hi-clr - #555);
    
    &:hover {
        color: #fff;
        box-shadow: 0px 0px 4px ($btn-hi-clr - #1a1a1a) inset;
        background: linear-gradient($btn-hi-clr + #050505, $btn-hi-clr - #050505);
    }
    &:focus {
        color: #fff;
    }
    &:active {
        background: linear-gradient($btn-hi-clr - #050505, $btn-hi-clr + #050505);
    }
}

footer {
    background-color: #000;
    color: #eee;
    padding: 3em 4em;
    font-family: "Source Sans Pro", sans-serif;
}

footer .link {
    margin-top: 5px;
    font-size: 1.5em;
    @media(max-width: $collapse) {
        font-size: 3vw;
    }
}

footer a {
    color: #fff;
    border-bottom: .5px solid #fff;
    &:hover {
        color: #aaa;
        border-color: #aaa;
        text-decoration: none;
    }
}

footer .copyright {
    margin-top: 1.5em;
}

footer .col-md-6:nth-child(2n) {
    @media(max-width: $col-collapse) {
        margin-top: 3em;
    }
}

